--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <script>
          var content = document.getElementsByName('insert-markdown')[0];
          var search = location.search.substr(1);
-         content.setAttribute('data-markdown', 'source/' + search + '.md');
+         content.setAttribute('data-markdown', 'markdown/' + search + '.md');
       </script>
 
       <script>
