Reorganize to support extra presentation files
markdown/$NAME.md has become sources/$NAME/$NAME.md, allowing extra
presentation-related files to live next to their presentations in source
control. Still is automatic, etc.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
       <script>
          var content = document.getElementsByName('insert-markdown')[0];
-         var search = location.search.substr(1);
-         content.setAttribute('data-markdown', 'markdown/' + search + '.md');
+         var search = location.search.substr(1)
+         content.setAttribute('data-markdown', 'sources/' + search + '/' + search + '.md');
       </script>
 
       <script>
