--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <script>
          var content = document.getElementsByName('insert-markdown')[0];
-         var search = location.search.substr(1)
+         var search = location.search.substr(1).split('/')[0];
          content.setAttribute('data-markdown', 'sources/' + search + '/' + search + '.md');
       </script>
 
